Fixing the website to centre-align.

--- a/style.css
+++ b/style.css
@@ -12,15 +12,19 @@ body {
   font-family: "Open Sans", sans-serif;
   background: #F5F4F0;
   font-size: 1.6rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #container {
-  width: 80rem;
-  margin: 8.8rem auto;
+  max-width: 1120px;
+  width: 90%; /* Usa 90% da largura da tela em telas menores */
+  margin: 0 auto;
 }
 
 span {
-  color:#E1624F;
+  color: #E1624F;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 0.8rem;
@@ -32,7 +36,16 @@ h1 {
 }
 
 h1, h2 {
-  color:#1B1B1B;
+  color: #1B1B1B;
+  font-weight: bold; /* Corrigido */
+  font-size: 2.8rem; /* Corrigido */
+}
+
+.title-page {
+  width: 1120px;
+  height: 79px;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
 }
 
 .description-page {
@@ -40,13 +53,15 @@ h1, h2 {
 }
 
 .description-page img {
-  width: 100%;
   border-radius: 2.8rem;
   margin-bottom: 2.4rem;
+  width: 1120px; 
+  height: 660px; 
+  object-fit: cover;
 }
 
 .description-page p {
-  color:#333333;
+  color: #333333;
   text-align: center;
   font-style: italic;
 }
@@ -54,7 +69,7 @@ h1, h2 {
 .divisor {
   width: 100%;
   height: 1px;
-  background:#D9D9D9;
+  background: #D9D9D9;
 }
 
 .title-list {
@@ -83,10 +98,13 @@ h1, h2 {
   width: 100%;
   border-radius: 2.8rem;
   margin-bottom: 2rem;
+  width: 1120px; 
+  height: 350px; 
+  object-fit: cover;
 }
 
 ol li {
-  color:#1B1B1B;
+  color: #1B1B1B;
   font-size: 2.8rem;
   font-weight: 700;
   margin-left: 2.4rem;
@@ -94,7 +112,7 @@ ol li {
 }
 
 ul li {
-  color:#0C51A7;
+  color: #0C51A7;
   font-weight: 700;
   margin-left: 2.4rem;
 }
@@ -124,10 +142,10 @@ footer {
   margin: 6.5rem 0 4.8rem;
 }
 
-@media (width <= 76em) {
+@media (max-width: 76em) { /* Corrigido */
   #container {
     --max-width: 768px;
-    width: min(var(--max-width), 100% - 2.4rem * 2);
+    width: min(var(--max-width), 100% - 4.8rem); /* Ajustado */
   }
 
   h1 {
